lab1/Test/L1-A-10-32.output
Error Type A at Line 9
Error Type A at Line 11
Error Type A at Line 13
Error Type B at Line 27
Error Type A at Line 28
Error Type B at Line 33
Error Type B at Line 39
