lab1/Test/L1-A-10-32.cmm
int ;
int ;
int _iD4OYteiQSPmc3gq07 , YypEuHYQ 

;
int jIhVvrlI9ZljPCZIpzPz ( ) {
  if ( DPOm2rR3ZLjmexJtOYd )   z ;
else   if ( w1ZjWALPe2QTWz ) {
    if &( hTiFA8v21M3nWU ) {
      int XbcJG ;
      int i #;
      int Z9Urum0EriJ ;
      int DIA3rfyNldXFb_5 ;&
      struct piXp7L4vT {
        struct {
          struct MwribenAsvwe W8sriH547BIrfwQ1 ;
        }J78XO9ZICCW_ZRBaWew ;
      }sOYyhEgo1UiogmolD ;
      int bwW ;
    }
    jo48 ;
    if ( LT77TL368OsEzC1q9 ) {
      float hUh ;
      if ( Jp35wBJ90T3cwPvnU )       if ( xGp5nIplU9n 
        )       isR8KpNXBaa7 ;
else {
        int while MONJtXXp5 , u_ [ 43462855 ] ;
~      }

{
        struct v5k8Ng9DoPHnCOel TEhs = rF ;
        uOAH2Yjb ;
        if ( KB2U 624612970.2130270051 )         yE 
          ;
else         yBbvZF4ZNCtOqHg0Re2 ;

      }    }else     return Rrx ;

    while ( C_k74za28PSnjb9YHNs ) int     _kcXf || 
      TzP9_4GAO != ! eEozUzPd2z ( C_IJCV3jGd1Rl1Hq9Uhb , 
      FPhrAQuyAbsFu2DV = kf && aByrO == eiTxLzmyr9u + nY 
      [ q7eOp <= Wj - Gkyao9GVaO * ( gaDgGI8jBwxPNl6eOg 
      || s && omu7ogZjChVJh81zAx5u >= RPXT_9CyPN_xN1tUw 
      ( khE9t53FcSQjSTwh = Q5TrhI0bWGsy && vElxx + XYo3CER77Tekv 
      / UJOWJkSQADQ ( N5_ && jMyzmg9oTkO36OncUy < _r + ( 
      MUqBjqgv0s4PwPf = O6OvYuVyDQbJ8cN = Er || zW3LOEbJvDznY7FqgVTL 
      > ol7B7FsnOL4mfz8boM7J ) ) / 1643945576 + B_uk ) ) 
      . vmqu5VDvbJEOqwpkY ] ) * - 931567623.166512733 / 
      ! R6UULVCyTW21QnHDGQuY ( ) ;

  }

}
int ;
int ;
int X7DzLE5cWCRLf ( int uY3TqDCgoxx3OnbqFTbd , int 
  IkV3 ) {
}
